Including some changes in Init-Html and add all the content of the Course 7

--- a/basic-html-css/init-html/3/course3.html
+++ b/basic-html-css/init-html/3/course3.html
@@ -20,7 +20,7 @@
     <section>
         <h1>Learnig to use Audios</h1>
         <audio controls autoplay loop>
-            <source src="url(#bars_124763)" type="audio/mp3">
+            <source src="https://github.com/perezcasal91/open-bootcamp-course/tree/master/basic-html-css/init-html/3/resources/audio/03-Multimedia_gnr-welcome.mp3" type="audio/mp3">
         </audio>
     </section>
 </body>
