--- a/basic-html-css/init-css/9/course9.html
+++ b/basic-html-css/init-css/9/course9.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Animations y Transitions in CSS</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./css/course9.css'>
-</head>
-<body>
-    <div class="frame-container">
-        <button class="btn-modern">
-            Button
-        </button>
-        <button class="btn-shadow">Shadow</button>
-    </div>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <title>Animations y Transitions in CSS</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            media="screen"
+            href="./css/course9.css"
+        />
+    </head>
+    <body>
+        <div class="frame-container">
+            <button class="btn-modern">Button</button>
+            <button class="btn-shadow">Shadow</button>
+        </div>
+    </body>
 </html>
